syntax = "proto3";

package database;

service DatabaseFactory {
    rpc Create (RequestBody) returns (ResponseBody) {}
    rpc Delete (NameHolder) returns (GenericResponse) {}
    rpc FetchLogs (LogRequest) returns (LogResponse) {}
    rpc Reload (LanguageHolder) returns (GenericResponse) {}
}

message RequestBody {
    string language = 1;
    string owner = 2;
    bytes data = 3;
}

message ResponseBody {
    bytes data = 1;
}

message NameHolder {
    string name = 1;
}

message LanguageHolder {
    string language = 1;
}

message GenericResponse {
    bool success = 1;
}

message LogRequest {
    string name = 1;
    string tail = 2;
}

message LogResponse {
    bool success = 1;
    repeated string data = 2;
}
