package mizu

import (
	"context"
	"encoding/json"
	"fmt"
	"strings"

	"github.com/sdslabs/gasper/configs"
	"github.com/sdslabs/gasper/lib/cloudflare"
	"github.com/sdslabs/gasper/lib/commons"
	"github.com/sdslabs/gasper/lib/docker"
	"github.com/sdslabs/gasper/lib/factory"
	pb "github.com/sdslabs/gasper/lib/factory/protos/application"
	"github.com/sdslabs/gasper/lib/mongo"
	"github.com/sdslabs/gasper/lib/redis"
	"github.com/sdslabs/gasper/lib/utils"
	"github.com/sdslabs/gasper/types"
	"google.golang.org/grpc"
)

// ServiceName is the name of the current microservice
const ServiceName = types.Mizu

type server struct{}

// Create creates an application
func (s *server) Create(ctx context.Context, body *pb.RequestBody) (*pb.ResponseBody, error) {
	language := body.GetLanguage()
	app := &types.ApplicationConfig{}

	err := json.Unmarshal(body.GetData(), app)
	if err != nil {
		return nil, err
	}

	app.SetLanguage(language)
	app.SetOwner(body.GetOwner())
	app.SetInstanceType(mongo.AppInstance)
	app.SetHostIP(utils.HostIP)
	app.SetNameServers(configs.GasperConfig.DNSServers)

	hikariNameServers, _ := redis.FetchServiceInstances(types.Hikari)
	for _, nameServer := range hikariNameServers {
		if strings.Contains(nameServer, ":") {
			app.AddNameServers(strings.Split(nameServer, ":")[0])
		} else {
			utils.LogError(fmt.Errorf("Hikari instance %s is of invalid format", nameServer))
		}
	}

	if pipeline[language] == nil {
		return nil, fmt.Errorf("Language `%s` is not supported", language)
	}
	resErr := pipeline[language].create(app)
	if resErr != nil {
		return nil, fmt.Errorf(resErr.Error())
	}

	sshEntrypointIP := configs.ServiceConfig.Iwa.EntrypointIP
	if len(sshEntrypointIP) == 0 {
		sshEntrypointIP = utils.HostIP
	}
	app.SetSSHCmd(configs.ServiceConfig.Iwa.Port, app.GetName(), sshEntrypointIP)

	app.SetAppURL(fmt.Sprintf("%s.%s.%s", app.GetName(), cloudflare.ApplicationInstance, configs.GasperConfig.Domain))

	if configs.CloudflareConfig.PlugIn {
		resp, err := cloudflare.CreateApplicationRecord(app.GetName())
		if err != nil {
			go commons.AppFullCleanup(app.GetName())
			go commons.AppStateCleanup(app.GetName())
			return nil, err
		}
		app.SetCloudflareID(resp.Result.ID)
	}

	err = mongo.UpsertInstance(
		types.M{
			mongo.NameKey:         app.GetName(),
			mongo.InstanceTypeKey: mongo.AppInstance,
		}, app)

	if err != nil && err != mongo.ErrNoDocuments {
		go commons.AppFullCleanup(app.GetName())
		go commons.AppStateCleanup(app.GetName())
		return nil, err
	}

	err = redis.RegisterApp(
		app.GetName(),
		fmt.Sprintf("%s:%d", utils.HostIP, configs.ServiceConfig.Mizu.Port),
		fmt.Sprintf("%s:%d", utils.HostIP, app.GetContainerPort()),
	)

	if err != nil {
		go commons.AppFullCleanup(app.GetName())
		go commons.AppStateCleanup(app.GetName())
		return nil, err
	}

	err = redis.IncrementServiceLoad(
		ServiceName,
		fmt.Sprintf("%s:%d", utils.HostIP, configs.ServiceConfig.Mizu.Port),
	)

	if err != nil {
		go commons.AppFullCleanup(app.GetName())
		go commons.AppStateCleanup(app.GetName())
		return nil, err
	}

	app.SetSuccess(true)

	response, err := json.Marshal(app)
	return &pb.ResponseBody{Data: response}, err
}

// Rebuild rebuilds an application
func (s *server) Rebuild(ctx context.Context, body *pb.NameHolder) (*pb.ResponseBody, error) {
	appName := body.GetName()

	app, err := mongo.FetchSingleApp(appName)
	if err != nil {
		return nil, err
	}

	commons.AppFullCleanup(appName)

	if pipeline[app.Language] == nil {
		return nil, fmt.Errorf("Non-supported language `%s` specified for `%s`", app.Language, appName)
	}
	resErr := pipeline[app.Language].create(app)
	if resErr != nil {
		return nil, fmt.Errorf(resErr.Error())
	}

	err = mongo.UpdateInstance(types.M{mongo.NameKey: appName}, app)
	if err != nil {
		return nil, err
	}

	app.SetSuccess(true)

	response, err := json.Marshal(app)
	return &pb.ResponseBody{Data: response}, err
}

// Delete deletes an application
func (s *server) Delete(ctx context.Context, body *pb.NameHolder) (*pb.DeletionResponse, error) {
	appName := body.GetName()
	filter := types.M{
		mongo.NameKey:         appName,
		mongo.InstanceTypeKey: mongo.AppInstance,
	}

	node, _ := redis.FetchAppNode(appName)
	go redis.DecrementServiceLoad(ServiceName, node)
	go redis.RemoveApp(appName)
	go commons.AppFullCleanup(appName)

	if configs.CloudflareConfig.PlugIn {
		go cloudflare.DeleteRecord(appName, mongo.AppInstance)
	}

	_, err := mongo.DeleteInstance(filter)
	if err != nil {
		return nil, err
	}
	return &pb.DeletionResponse{Success: true}, nil
}

// FetchLogs returns the docker container logs of an application
func (s *server) FetchLogs(ctx context.Context, body *pb.LogRequest) (*pb.LogResponse, error) {
	appName := body.GetName()
	tail := body.GetTail()

	data, err := docker.ReadLogs(appName, tail)

	if err != nil && err.Error() != "EOF" {
		return nil, err
	}
	return &pb.LogResponse{
		Success: true,
		Data:    data,
	}, nil
}

// NewService returns a new instance of the current microservice
func NewService() *grpc.Server {
	return factory.NewApplicationFactory(&server{})
}
